# tools

./: .dockerignore  README.md  pyproject.toml
feishu-sheet-post-sender/: .env.example  .gitignore  HANDOFF.md  README.md  contact_cache.py  feishu_sheet_post_sender.py  test_contact_cache.py  test_feishu_sheet_post_sender.py  test_weekly_send.py  weekly_send.py
finance_agent/: __init__.py  models.py  parser.py  structure.py  template.py
procurement-tool/: .gitignore  Dockerfile  README.md
procurement-tool/deploy/: README.md
procurement-tool/finance_agent/: adapter.py  agent.py  config.py  engine.py  invoice.py  server.py  storage.py
procurement-tool/samples/: generate_sample.py
procurement-tool/static/: index.html
procurement-tool/tools/: rematch_q1_with_structure.py
samples/: service_fee_2026_q1.xlsx
skill/: README.md
static/: app.css  app.js
tests/: test_finance_agent.py
